--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: twitter
+  - title: telegram
+    url: https://t.me/vlad1038063
+  - title: viber
     url: #
-  - title: github
-    url: #
-  - title: linkedin
+  - title: skype
     url: #
